--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,12 @@
     "eth-revert-reason": "^1.0.3",
     "ethers": "^5.5.1",
     "framer-motion": "^10.18.0",
+    "i18next": "^23.11.5",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.1",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3"
   },
